GeneticWalk: add windows support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,15 @@ cmake_minimum_required(VERSION 3.5)
 project(GeneticWalk)
 
 #set(CMAKE_CXX_COMPILER "g++")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pedantic -g -O0 -Wall -Wextra -Iinc")
+if(NOT WIN32)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pedantic -g -O0 -Wall -Wextra")
+else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+endif()
 
 set(
 
@@ -29,16 +36,23 @@ set(
 
 
 add_executable(GeneticWalk ${SOURCE_FILES})
-target_link_libraries(GeneticWalk GLEW)
+include_directories(inc)
+
 target_link_libraries(GeneticWalk glfw3)
-target_link_libraries(GeneticWalk GL)
-target_link_libraries(GeneticWalk m)
-target_link_libraries(GeneticWalk dl)
-target_link_libraries(GeneticWalk Xinerama)
-target_link_libraries(GeneticWalk Xrandr)
-target_link_libraries(GeneticWalk Xi)
-target_link_libraries(GeneticWalk Xcursor)
-target_link_libraries(GeneticWalk X11)
-target_link_libraries(GeneticWalk Xxf86vm)
-target_link_libraries(GeneticWalk pthread)
-target_link_libraries(GeneticWalk assimp)
+if(NOT WIN32)
+    target_link_libraries(GeneticWalk GL)
+    target_link_libraries(GeneticWalk glut)
+    target_link_libraries(GeneticWalk dl)
+    target_link_libraries(GeneticWalk Xinerama)
+    target_link_libraries(GeneticWalk Xrandr)
+    target_link_libraries(GeneticWalk Xi)
+    target_link_libraries(GeneticWalk Xcursor)
+    target_link_libraries(GeneticWalk X11)
+    target_link_libraries(GeneticWalk Xxf86vm)
+    target_link_libraries(GeneticWalk pthread)
+else()
+    target_link_libraries(GeneticWalk glew32)
+    target_link_libraries(GeneticWalk opengl32)
+    target_link_libraries(GeneticWalk GLU32)
+    target_link_libraries(GeneticWalk assimp)
+endif()
