--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 src/glad.c linguist-vendored=true
 inc/stb_image.h linguist-vendored=true
+inc/glad/glad.h linguist-vendored=true
+inc/KHR/khrplatform.h linguist-vendored=true
